# routing-aware-atos

./: .gitignore  README.md  pyproject.toml
configs/: causal_eval.yaml  default.yaml  eval.yaml
configs/evaluation/: ablation_summary.yaml  attention_top1_causal_restore.yaml  attention_top1_feature_eval.yaml  attention_topk_causal_restore.yaml  attention_topk_feature_eval.yaml  attribution_cache.yaml  attribution_topk_causal_restore.yaml  attribution_topk_feature_eval.yaml  causal_ablation_summary.yaml  causal_restore.yaml  (+10 more)
scripts/: benchmark_causal_policies.py  benchmark_policies.py  build_attribution_cache.py  build_baseline_pairs.py  build_routed_pairs.py  build_transport_taxonomy.py  compare_attention_attribution.py  eval_feature_space.py  export_feature_case_studies.py  export_gemma_scope_decoder.py  make_mock_cached_samples.py  make_mock_decoder.py  make_mock_readout.py  make_paper_figures.py  plot_transport_taxonomy.py  run_ablation_summary.py  run_all_mock_pipeline.py  run_causal_restore.py  run_full_routing_sweep.py  train_baseline_ato.py  train_ra_atos.py  train_transport_operators.py
tests/: conftest.py  test_ablations.py  test_activation_loader.py  test_attribution_cache.py  test_baseline_pairs.py  test_cached_sample.py  test_causal_restore.py  test_feature_eval.py  test_feature_metrics.py  test_paper_figures.py  test_policy_benchmark.py  test_route_agreement.py  test_routed_dataset.py  test_routed_integration.py  test_routed_transport_operator.py  test_routing_policies.py  test_training_scripts.py  test_transport_operator.py  test_transport_taxonomy.py
(+48 files in other folders)
